# sigilmaker

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
sigilmaker/: __init__.py  cli.py  core.py  gui.py  shapes.py
sigilmaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
